fix(Label): fix parent overflow

--- a/src/components/Label/Label.scss
+++ b/src/components/Label/Label.scss
@@ -18,6 +18,7 @@ $transition-timing-function: ease-in-out;
     display: inline-flex;
     align-items: center;
     position: relative;
+    max-width: 100%;
     height: var(--_--height);
     border-radius: var(--_--border-radius);
     color: var(--_--text-color);
